# cmake-cpp-template

./: .gitignore  CMakeLists.txt  README.md  tubumu.cpp
cmake/: auto_create_projects.cmake  configure-rpath.cmake  configure_rpath.cmake  create_projects.cmake  find_ffmpeg.cmake  summary.cmake  utils.cmake
projects/tubumu/: CMakeLists.txt  tubumu.cpp
projects/tubumu-test/: main.cpp
src/example/: CMakeLists.txt  _exports.h  example.cpp  example.h
src/example-test/: main.cpp
src/example_test/: main.cpp
